@@ -21,6 +21,8 @@
 
 #include <stdint.h>
 
+class CNanInjector;
+
 namespace ml {
 namespace core {
 class CStatePersistInserter;
@@ -133,6 +135,9 @@ public:
     //! Name of component
     std::string name() const override;
 
+    //! Check that the state is valid.
+    bool isBad() const override;
+
 private:
     using TSeasonalTimePtr = std::unique_ptr<CSeasonalTime>;
 
@@ -148,6 +153,9 @@ private:
         void acceptPersistInserter(core::CStatePersistInserter& inserter) const;
 
         uint64_t checksum(uint64_t seed) const;
+
+        //! Check that the state is valid.
+        bool isBad() const;
 
         TRegression s_Regression;
         CFloatStorage s_Variance;
@@ -198,6 +206,9 @@ private:
 
     //! The buckets.
     TBucketVec m_Buckets;
+
+    //! Befriend a helper class used by the unit tests
+    friend class ::CNanInjector;
 };
 
 //! Create a free function which will be found by Koenig lookup.
